sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int=getNombreValeurs()
  for (i<-1 to lgr-1) {
    for (j <- (1 to i+1).reverse) {
      var v:Int=i
      if (plusPetit(v,j-1)) { copie(j-1,j);}
    }
   	copie(v,i)
 	}
}